Modify readme file

--- a/README
+++ b/README
@@ -5,3 +5,6 @@ To install Cloud Asterisk
 3. Run install_v11.sh
 4. Answer all questions asked
 5. Reboot the system 
+
+
+Credits: Techexpert Ltd., Sergey Bondarenko
