--- a/README
+++ b/README
@@ -7,4 +7,6 @@ To install Cloud Asterisk
 5. Reboot the system 
 
 
-Credits: Techexpert Ltd., Sergey Bondarenko
+Credits: 
+Techexpert Ltd. www.techexpert.ua
+Sergey Bondarenko sergibondarenko@gmail.com
