--- a/README
+++ b/README
@@ -9,4 +9,4 @@ To install Cloud Asterisk
 
 Credits: 
 Techexpert Ltd. www.techexpert.ua
-Sergey Bondarenko <a href="mailto:sergibondarenko@gmail.com">sergibondarenko@gmail.com</a>
+Sergey Bondarenko sergibondarenko@gmail.com
